--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,23 +59,23 @@
             <ul>
 
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100009366910546" target="_blank"><img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/facebook-new.png"></img>
+                    <a href="https://www.facebook.com/profile.php?id=100009366910546" target="_blank"><img src="Images/facebook-new.png"></img>
                     </a>
                 </li>
                 <li>
-                    <a href="#"><img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/free-twitter-logo-icon-2429-thumb.png"></img>
+                    <a href="#"><img src="Images/free-twitter-logo-icon-2429-thumb.png"></img>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/ch01_vlogs/" target="_blank"><img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/2048px-Instagram_icon.png"></img>
+                    <a href="https://www.instagram.com/ch01_vlogs/" target="_blank"><img src="Images/instagram.png"></img>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UC4wznJ8BvvlQgQK5IfD0W8Q" target="_blank"><img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/free-youtube-logo-icon-2431-thumb.png"></img>
+                    <a href="https://www.youtube.com/channel/UC4wznJ8BvvlQgQK5IfD0W8Q" target="_blank"><img src="Images/free-youtube-logo-icon-2431-thumb.png"></img>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/gaurav-kumar-176548216/" target="_blank"><img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/linkedin-icon-logo-png-transparent.png"></img>
+                    <a href="https://www.linkedin.com/in/gaurav-kumar-176548216/" target="_blank"><img src="Images/linkedin-icon-logo-png-transparent.png"></img>
                     </a>
                 </li>
             </ul>
@@ -87,7 +87,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/149286043_2876805822641620_2021542015585698681_n.jpg" alt="">
+                    <img src="Images/149286043_2876805822641620_2021542015585698681_n.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I am Gauarv kumar and I'am <span class="typing-2"></span></div>
