--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -118,7 +118,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Web Developer</h3>
-                        <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/best-20-web-development-blogs.png">
+                        <img src="Images/best-20-web-development-blogs.png">
                         <p>I know Html, Css ,java Script ,jquery. i can develop a full fledge website which will full fill your goals</p>
                         <a href="#">Read more</a>
                     </div>
@@ -128,7 +128,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>S.E.O</h3>
-                        <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/seo-for-beginners.jpg"></img>
+                        <img src="Images/seo-for-beginners.jpg"></img>
                         <p>Search engine optimization is the process of improving the quality and quantity of website traffic to a website or a web page from search engines</p>
                         <a href="#">Read more</a>
                     </div>
@@ -138,7 +138,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Python</h3>
-                        <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/s-l800.jpg"></img>
+                        <img src="Images/s-l800.jpg"></img>
                         <p>With me, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. </p>
                         <a href="#">Read more</a>
                     </div>
@@ -149,7 +149,7 @@
                     <div class="content">
 
                         <h3>S.M.M</h3>
-                        <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/Benefits-of-Organic-Social-Media-Marketing.jpg">
+                        <img src="Images/Benefits-of-Organic-Social-Media-Marketing.jpg">
                         <p>Social media marketing is the use of social media platforms and websites to promote a product or service.</p>
                         <a href="#">Read more</a>
                     </div>
