--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -236,14 +236,14 @@
                 </div>
                 <div class="card-1">
                     <div class="box-1">
-                        <img src="images/Guri.jpg" alt="">
+                        <img src="Images/Guri.jpg" alt="">
                         <div class="text">Gurvinder</div>
                         <p>Software Developer</p>
                     </div>
                 </div>
                 <div class="card-1">
                     <div class="box-1">
-                        <img src="images/tarvinder.jpg" alt="">
+                        <img src="Images/tarvinder.jpg" alt="">
                         <div class="text">Travinder</div>
                         <p>Data Analyst</p>
                     </div>
