--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,7 +138,7 @@
                 <div class="card">
                     <div class="content">
                         <h3>Python</h3>
-                        <img src="Images/s-l800.jpg"></img>
+                        <img src="Images/python.jpg"></img>
                         <p>With me, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. </p>
                         <a href="#">Read more</a>
                     </div>
