--- a/Glass/index.html
+++ b/Glass/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
+    <div class="name">
+        <h1>This is made by Gaurav Kumar</h1>
+    </div>
     <div class="container">
+
         <div class="card">
             <div class="content">
                 <h2> 01 </h2>
@@ -38,16 +42,18 @@
                     </div>
                 </div>
             </div>
-            <script type="text/javascript" src="vanilla-tilt.js"></script>
-            <script>
-                VanillaTilt.init(document.querySelectorAll(".card"), {
-                    max: 25,
-                    speed: 400,
-                    glare: true,
-                    "max-glare": 1,
-                });
-            </script>
+        </div>
 
+        <script type="text/javascript" src="vanilla-tilt.js"></script>
+        <script>
+            VanillaTilt.init(document.querySelectorAll(".card"), {
+                max: 25,
+                speed: 400,
+                glare: true,
+                "max-glare": 1,
+            });
+        </script>
+    </div>
 </body>
 
 </html>
