--- a/weather/index.html
+++ b/weather/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="style.css">
     <script src="myscript.js" defer></script>
     <title>Live Weather app</title>
 </head>
@@ -28,8 +28,11 @@
                     <div class="weather">
                         <h2 class="city">Weather In Chandigarh</h2>
                         <h1 class="temp">33°c</h1>
-                        <img src="" alt="" class="icon" />
-                        <div class="description">Cloudy</div>
+                        <div class="flex">
+                            <img src="" alt="" class="icon" />
+                            <div class="description">Cloudy</div>
+                        </div>
+
                         <div class="humidity">Humidity</div>
 
                         <div class="wind">wind Speed:6.2 km/hr</di>
