--- a/news2/index.html
+++ b/news2/index.html
@@ -111,28 +111,28 @@
                     <div class="row row-cols-1 row-cols-md-3 g-4">
                         <div class="col">
                             <div class="card h-100">
-                                <img src="image/card.png" class="card-img-top" alt="...">
+                                <img src="https://source.unsplash.com/1600x900/?study" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <h5 class="card-title">Study</h5>
+                                    <p class="card-text">TRefresh the page to get new pic</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100">
-                                <img src="image/card.png" class="card-img-top" alt="...">
+                                <img src="https://source.unsplash.com/1600x900/?nature,wildlife,india" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a short card.</p>
+                                    <h5 class="card-title">Nature pics</h5>
+                                    <p class="card-text">Refresh the page to get new pic</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100">
-                                <img src="image/card.png" class="card-img-top" alt="...">
+                                <img src="https://source.unsplash.com/1600x900/?india" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h5 class="card-title">India</h5>
+                                    <p class="card-text">Refresh the page to get new pic</p>
                                 </div>
                             </div>
                         </div>
