responcive carsd pic updated

--- a/responsivecard/index.html
+++ b/responsivecard/index.html
@@ -15,7 +15,7 @@
     <div class="box-2">
 
         <div class="imgboxx">
-            <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/k.jpg">
+            <img src="images/sunil.jpeg">
         </div>
         <div class="content-2">
             <h2> Sunil<br><span>Andriod Developer</span></h2>
@@ -23,7 +23,7 @@
     </div>
     <div class="box-2">
         <div class="imgboxx">
-            <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/y.jpg">
+            <img src="images/tarvinder.jpg">
         </div>
         <div class="content-2">
             <h2> Tarvinder<br><span>Software Developer</span></h2>
@@ -31,7 +31,7 @@
     </div>
     <div class="box-2">
         <div class="imgboxx">
-            <img src="file:///C:/Users/Ch%2001%20Vlogs/Desktop/protfolio/Images/d.jpg">
+            <img src="images/Guri.jpg">
         </div>
         <div class="content-2">
             <h2> Avhishek<br><span>Manager</span></h2>
