--- a/vipfood/index.html
+++ b/vipfood/index.html
@@ -3,22 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vip Food Corner</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <title>complete responsive food website design tutorial </title>
+
+    <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
+    <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <!-- Header section -->
+
+    <!-- header section starts  -->
+
     <header>
 
-        <a href="#" class="logo"><i class="fas fa-utensils"></i>VIP FOOD CORNER</a>
+        <a href="#" class="logo"><i class="fas fa-utensils"></i>food</a>
+
         <div id="menu-bar" class="fas fa-bars"></div>
+
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#speciality">speciality</a>
@@ -27,6 +32,7 @@
             <a href="#review">review</a>
             <a href="#order">order</a>
         </nav>
+
     </header>
     <!-- Home section -->
 
@@ -50,7 +56,7 @@
     </section>
 
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
