--- a/vipfood/index.html
+++ b/vipfood/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive food website design tutorial </title>
+    <title>VIP FOOD CORNER</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -20,7 +20,7 @@
 
     <header>
 
-        <a href="#" class="logo"><i class="fas fa-utensils"></i>food</a>
+        <a href="#" class="logo"><i class="fas fa-utensils"></i>VIP FOOD CORNER</a>
 
         <div id="menu-bar" class="fas fa-bars"></div>
 
@@ -47,13 +47,71 @@
             <img src="images/home-img.png" alt="">
         </div>
 
-
-
-
-
-
-
     </section>
+    <!-- Speciality section   -->
+    <section class="speciality" id="speciality">
+        <h1 class="heading">Our <span>Speciality</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img class="image" src="images/s-img-1.jpg" alt="">
+                <div class="content">
+                    <img src="images/s-1.png" alt="">
+
+                    <h3>Tasty Grillled Paty</h3>
+                    <p>Tasty Patty whic are filled with alots of mayo, sauces, and vegi. we have varites in patty you can see in our menu.</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <img class="image" src="images/s-img-2.jpg" alt="">
+                <div class="content">
+                    <img src="images/s-2.png" alt="">
+
+                    <h3>Tasty Grillled Pizza</h3>
+                    <p>Tasty Patty whic are filled with alots of mayo, sauces, and vegi. we have varites in patty you can see in our menu.</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <img class="image" src="images/s-img-3.jpg" alt="">
+                <div class="content">
+                    <img src="images/s-3.png" alt="">
+
+                    <h3>Tasty Ice cream</h3>
+                    <p>Tasty Patty whic are filled with alots of mayo, sauces, and vegi. we have varites in patty you can see in our menu.</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <img class="image" src="images/s-img-4.jpg" alt="">
+                <div class="content">
+                    <img src="images/s-4.png" alt="">
+
+                    <h3>Tasty Drinks</h3>
+                    <p>Tasty Patty whic are filled with alots of mayo, sauces, and vegi. we have varites in patty you can see in our menu.</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <img class="image" src="images/s-img-5.jpg" alt="">
+                <div class="content">
+                    <img src="images/s-5.png" alt="">
+                    <h3>Healty Breakfast</h3>
+                    <p>Tasty Patty whic are filled with alots of mayo, sauces, and vegi. we have varites in patty you can see in our menu.</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <img class="image" src="images/s-img-6.jpg" alt=""> >
+                <div class="content">
+                    <img src="images/s-6.png" alt="">
+                    <h3>Healty Breakfast</h3>
+                    <p>Tasty Patty whic are filled with alots of mayo, sauces, and vegi. we have varites in patty you can see in our menu.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Popular section -->
 
 
     <script src="script.js"></script>
