--- a/vipfood/index.html
+++ b/vipfood/index.html
@@ -112,6 +112,93 @@
         </div>
     </section>
     <!-- Popular section -->
+    <section class="popular" id="popular">
+
+        <h1 class="heading">Most <span>Popular</span></h1>
+        <div class="box-container">
+
+            <div class="box">
+                <span class="price">₹10-₹30</span>
+                <img src="images/p-1.jpg" alt="">
+                <h3>Tasty Burger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <a href="" class="btn">Order Now</a>
+            </div>
+            <div class="box">
+                <span class="price">₹10-₹30</span>
+                <img src="images/p-2.jpg" alt="">
+                <h3>Tasty Burger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <a href="" class="btn">Order Now</a>
+            </div>
+            <div class="box">
+                <span class="price">₹10-₹30</span>
+                <img src="images/p-3.jpg" alt="">
+                <h3>Tasty Burger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <a href="" class="btn">Order Now</a>
+            </div>
+            <div class="box">
+                <span class="price">₹10-₹30</span>
+                <img src="images/p-4.jpg" alt="">
+                <h3>Tasty Burger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <a href="" class="btn">Order Now</a>
+            </div>
+            <div class="box">
+                <span class="price">₹10-₹30</span>
+                <img src="images/p-5.jpg" alt="">
+                <h3>Tasty Burger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <a href="" class="btn">Order Now</a>
+            </div>
+            <div class="box">
+                <span class="price">₹10-₹30</span>
+                <img src="images/p-6.jpg" alt="">
+                <h3>Tasty Burger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <a href="" class="btn">Order Now</a>
+            </div>
+
+        </div>
+
+    </section>
 
 
     <script src="script.js"></script>
