--- a/vipfood/index.html
+++ b/vipfood/index.html
@@ -197,8 +197,130 @@
             </div>
 
         </div>
+    </section>
+    <!-- how it works section -->
+    <section class="steps" id="steps">
+        <div class="box">
+            <img src="images/step-1.jpg" alt="">
+            <h3>Choose Your Favorite Snack</h3>
+        </div>
+        <div class="box">
+            <img src="images/step-2.jpg" alt="">
+            <h3>Free & Fast Delivery</h3>
+        </div>
+        <div class="box">
+            <img src="images/step-3.jpg" alt="">
+            <h3>Easy pay</h3>
+        </div>
+        <div class="box">
+            <img src="images/step-4.jpg" alt="">
+            <h3>Enjoy Your food</h3>
+        </div>
 
     </section>
+
+    <!-- review section -->
+    <!-- review section starts  -->
+
+    <section class="review" id="review">
+
+        <h1 class="heading"> our customers <span>reviews</span> </h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <img src="images/pic1.jpg" alt="">
+                <h3>Gaurav Kumar</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>One of the best outlet where we get best items to eat with low cost</p>
+            </div>
+            <div class="box">
+                <img src="images/pic2.png" alt="">
+                <h3>Deepak Sharma</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>super shop ! mine personal favourite. i came chd for work and was very hungry on that time ,. found this shop with full of meals and good service! everyone should visit there.</p>
+            </div>
+            <div class="box">
+                <img src="images/pic3.png" alt="">
+                <h3>Suraj Sharma</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Best place for foodies one of the best place in Zirakpur good quality and quantity reasonable and very higeinic must visit strongly recommend </p>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- order section starts  -->
+
+    <section class="order" id="order">
+
+        <h1 class="heading"> <span>order</span> now </h1>
+
+        <div class="row">
+
+            <div class="image">
+                <img src="images/order-img.jpg" alt="">
+            </div>
+
+            <form action="">
+
+                <div class="inputBox">
+                    <input type="text" placeholder="name">
+                    <input type="email" placeholder="email">
+                </div>
+
+                <div class="inputBox">
+                    <input type="number" placeholder="number">
+                    <input type="text" placeholder="food name">
+                </div>
+
+                <textarea placeholder="address" name="" id="" cols="30" rows="10"></textarea>
+
+                <input type="submit" value="order now" class="btn">
+
+            </form>
+
+        </div>
+
+    </section>
+
+    <!-- order section ends -->
+    <!-- footer section -->
+    <section class="footer">
+        <h1 class="credit"> created by <span> Gaurav Kumar </span> | all rights reserved! </h1>
+        <h2 class="folow"> Follow me</h2>
+
+        <div class="share">
+            <a href="https://www.facebook.com/profile.php?id=100009366910546" class="btn">facebook</a>
+            <a href="https://www.instagram.com/ch01_vlogs/" class="btn">instagram</a>
+            <a href="https://www.linkedin.com/in/gaurav-kumar-176548216/" class="btn">linkedin</a>
+            <a href="https://github.com/gkaysofficial" class="btn">Github</a>
+        </div>
+
+
+
+    </section>
+
+    <!-- scroll top button  -->
+    <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
 
 
     <script src="script.js"></script>
