--- a/vipfood/index.html
+++ b/vipfood/index.html
@@ -309,10 +309,10 @@
         <h2 class="folow"> Follow me</h2>
 
         <div class="share">
-            <a href="https://www.facebook.com/profile.php?id=100009366910546" class="btn">facebook</a>
-            <a href="https://www.instagram.com/ch01_vlogs/" class="btn">instagram</a>
-            <a href="https://www.linkedin.com/in/gaurav-kumar-176548216/" class="btn">linkedin</a>
-            <a href="https://github.com/gkaysofficial" class="btn">Github</a>
+            <a href="https://www.facebook.com/profile.php?id=100009366910546 target="_blank"" class="btn">facebook</a>
+            <a href="https://www.instagram.com/ch01_vlogs/ target="_blank"" class="btn">instagram</a>
+            <a href="https://www.linkedin.com/in/gaurav-kumar-176548216/ target="_blank"" class="btn">linkedin</a>
+            <a href="https://github.com/gkaysofficial target="_blank"" class="btn">Github</a>
         </div>
 
 
