--- a/cho/index.html
+++ b/cho/index.html
@@ -275,7 +275,7 @@
         <div class="box-container">
 
             <div class="box">
-                <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>groco</a>
+                <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Choicista</a>
                 <p>One step to flawless beauty</p>
                 <div class="share">
                     <!-- <a href="#" class="btn fab fa-facebook-f"></a>
