--- a/cho/index.html
+++ b/cho/index.html
@@ -63,7 +63,7 @@
 
         <div class="content">
             <span>Buy Beauty,Skincare & Personal Porducts </span>
-            <h3>your daily need products</h3>
+            <h3>One step to flawless beauty</h3>
 
         </div>
 
@@ -275,7 +275,7 @@
         <div class="box-container">
 
             <div class="box">
-                <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Choicista</a>
+                <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>groco</a>
                 <p>One step to flawless beauty</p>
                 <div class="share">
                     <!-- <a href="#" class="btn fab fa-facebook-f"></a>
@@ -286,28 +286,7 @@
                 
 
             </div>
-            <div class="box">
-                <h3>our location</h3>
-                <div class="links">
-                    <a href="#">india</a>
-                    <div class="mapouter">
-                        <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
-                                src="https://maps.google.com/maps?q=30.940908432006836,75.8558349609375&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                            <style>
-                                .mapouter {
-                                    position: relative;
-                                    text-align: right;
-                                    height: 200px;
-                                    width: 200px;
-                                }
-                            </style>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
+            
 
             <div class="box">
                 <h3>quick links</h3>
