--- a/choic/index.html
+++ b/choic/index.html
@@ -107,11 +107,11 @@
 
             <div class="box">
                 <!-- <span class="discount">-33%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/pro1.jpg" alt="">
                 <h3>O2 GLOW FACIAL KIT</h3>
                 <div class="stars">
@@ -132,11 +132,11 @@
 
             <div class="box">
                 <!-- <span class="discount">-45%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/pro2.jpg" alt="">
                 <h3>SKIN LIFT FACIAL KIT</h3>
                 <div class="stars">
@@ -157,11 +157,11 @@
 
             <div class="box">
                 <!-- <span class="discount">-52%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/pro3.jpg" alt="">
                 <h3>GLOWVITA FACIAL KIT</h3>
                 <div class="stars">
@@ -183,11 +183,11 @@
 
             <div class="box">
                 <!-- <span class="discount">-20%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/choicistaban.jpg" alt="">
                 <h3>D-TAN FACIAL KIT</h3>
                 <div class="stars">
@@ -207,11 +207,11 @@
             </div>
             <div class="box">
                 <!-- <span class="discount">-13%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/pro4.jpg" alt="">
                 <h3>ROSE WATER</h3>
                 <div class="stars">
@@ -231,11 +231,11 @@
             </div>
             <div class="box">
                 <!-- <span class="discount">-20%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/SUNBLOCK.jpeg" alt="">
                 <h3>SUNBLOCK</h3>
                 <div class="stars">
@@ -255,11 +255,11 @@
             </div>
             <div class="box">
                 <!-- <span class="discount">-20%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/WHITENING LOTION.jpeg" alt="">
                 <h3>SKIN WHITENING LOTION</h3>
                 <div class="stars">
@@ -279,11 +279,11 @@
             </div>
             <div class="box">
                 <!-- <span class="discount">-20%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/MOISTURIZING LOTION(200 ml).jpeg" alt="">
                 <h3>MOISTURIZING LOTION(200 ml)</h3>
                 <div class="stars">
@@ -303,11 +303,11 @@
             </div>
             <div class="box">
                 <!-- <span class="discount">-20%</span> -->
-                <div class="icons">
+                <!-- <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="fas fa-share"></a>
                     <a href="#" class="fas fa-eye"></a>
-                </div>
+                </div> -->
                 <img src="images/MOISTURIZING LOTION(100 ml).jpeg" alt="">
                 <h3>MOISTURIZING LOTION(100 ml)</h3>
                 <div class="stars">
